--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <!-- Options will be generated here -->
             </div>
             <div class="d-flex justify-content-between mt-3">
-             
+                <button class="btn btn-warning" onclick="skipQuote()">Skip</button>
             </div>
             <p id="result" class="text-info fw-bold mt-3"></p>
             <button id="next-quote" class="btn btn-primary mt-4 d-none" onclick="nextQuote()">Next Quote</button>
