centralize skip button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="options" class="d-grid gap-2 mb-3">
                 <!-- Options will be generated here -->
             </div>
-            <div class="d-flex justify-content-between mt-3">
+            <div class="d-flex justify-content-center mt-3">
                 <button class="btn btn-warning" onclick="skipQuote()">Skip</button>
             </div>
             <p id="result" class="text-info fw-bold mt-3"></p>
